# pantrychef-api

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  openapi.json  pyproject.toml
.github/workflows/: stainless.yml
.stainless/: openapi.json  openapi.yaml  stainless.yml  workspace.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_dietary_fields.py
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  cooking_history.py  favorite.py  ingredient.py  pantry.py  recipe.py  user.py
app/routers/: __init__.py  auth.py  favorites.py  history.py  ingredients.py  pantry.py  recipes.py  recommendations.py
app/schemas/: __init__.py  common.py  cooking_history.py  favorite.py  ingredient.py  pantry.py  recipe.py  user.py
app/services/: __init__.py  cooking_history.py  favorite.py  ingredient.py  pantry.py  recipe.py  recommendation.py  user.py
app/utils/: __init__.py  auth.py  dependencies.py
scripts/: demo.sh  export_openapi.py  seed.py
tests/: __init__.py  conftest.py  test_auth.py  test_favorites.py  test_history.py  test_ingredients.py  test_pantry.py  test_recipes.py  test_recommendations.py
