[project]
name = "pantrychef"
version = "0.1.0"
description = "A FastAPI-powered recipe recommendation service that suggests meals based on ingredients you have at home"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]

[project.scripts]
pantrychef = "app.main:app"

# Run these with: uv run <command>
# uv run uvicorn app.main:app --reload  (dev server)
# uv run pytest                          (tests)
# uv run ruff check .                    (lint)
# uv run ruff format .                   (format)
# uv run alembic upgrade head            (migrate)
# uv run python scripts/seed.py          (seed)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
